# CSI_ZLG_firmware

./: CMakeLists.txt  make.sh
src/: DataStructure.h  main.cpp
src/code/common/: CommonLog.cpp  CommonLog.h  MessageQueue.hpp
src/code/protocol/: Modbus.cpp  Modbus.h  Protocol.h
src/code/serial/: SerialAbstract.h  Serial_485.cpp  Serial_485.h
src/code/setting/: Setting.cpp  Setting.h
src/code/task/: TaskAbstract.h  TaskHttp.cpp  TaskHttp.h  TaskSchedule.cpp  TaskSchedule.h  TaskSerial.cpp  TaskSerial.h  TaskWebSocket.cpp  TaskWebSocket.h
src/code/uart/: UartAbstract.h  Uart_485.cpp  Uart_485.h
src/code/webserver/: HttpService.cpp  HttpService.h  NetWorkLayer.h  NetWorkLayerImp.cpp  NetWorkLayerImp.h  NetworkService.h  WebSocketService.cpp  WebSocketService.h
src/inc_plug/: Setting.h
src/lib_base/cjson/: libcjson.so.1.7.16  libcjson_utils.so.1
